--- a/APBD/app/src/main/res/values/strings.xml
+++ b/APBD/app/src/main/res/values/strings.xml
@@ -20,4 +20,10 @@
     <string name="history">History</string>
     <string name="settings">Settings</string>
     <string name="planning">Planning</string>
+    <string name="title_activity_loginpage">loginpage</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
 </resources>
