--- a/APBD/app/src/main/res/values/strings.xml
+++ b/APBD/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="hello_world">Hello Square World!</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 </resources>
